# ceia-tpf

./: .gitignore  .gitmodules  AGENTS.md  CONVENTIONS.md  Makefile  README.md  analyze_regression_backtest.py  analyze_study.py  bot_state.json  data_analysis.py  indicators_analysis.py  logging.ini  mlflow.db  optuna-study.db  pyproject.toml
conductor/: product-guidelines.md  product.md  tech-stack.md  tracks.md
conductor/tracks/data_acquisition_preprocessing_20260217/: index.md  metadata.json  plan.md  spec.md
data/: join_1m_klines.py  sources.md
data_analysis/: analyze_regression_backtest.ipynb  analyze_regression_backtest.py  cscv_analysis.ipynb  cscv_analysis.py  data_analysis.ipynb  data_analysis.py  feature_importance_analysis.ipynb  feature_importance_analysis.py  indicators_analysis.ipynb  indicators_analysis.py  labeling_analysis.ipynb  labeling_analysis.py
docs/: research.md
docs/project/template/: 4 - Sobre el mejor lugar en el que residir y monta.md  charter.aux  charter.out  charter.tex  charter.toc
models/: TA.ipynb  basic.ipynb  fourier.ipynb  utils.py  visualization.ipynb
results/: predictions_trial_10.csv  predictions_trial_2.csv  predictions_trial_3.csv  predictions_trial_4.csv  predictions_trial_5.csv  predictions_trial_6.csv  predictions_trial_7.csv  predictions_trial_8.csv  predictions_trial_9.csv  regression_backtest_results.csv  regression_backtest_results_14d.csv  regression_backtest_results_365d.csv  regression_backtest_results_7d.csv
scripts/: manage_notebooks.sh
src/: advanced_backtest.py  autogluon_prediction.py  backtest.py  backtest_library.py  backtest_utils.py  chronos2_regression.py  chronos_regression.py  chronos_strategy.py  constants.py  data_analysis.py  har_volatility.py  indicators.py  main.py  martingale_strategy.py  ml_strategies.py  palazzo_strategy.py  papper.py  prophet_example.py  rf_price_reversal.py  run_chronos_cpcv_tmp.py  statistical_strategies.py  strategy_runner.py  test_svm_classification.py  transformer_price_reversal.py  visualize_trades.py  volume_data_processor.py  xgboost_price_reversal.py  xgboost_price_reversal_palazzo.py
src/backtesting/: __init__.py  backtesting.py  chronos_cpcv_pipeline.py  chronos_features_cpcv.py  chronos_metalabeling_cpcv.py  cpcv.py  cpcv_runner.py  run_chronos_cpcv.py  run_palazzo_cpcv.py
src/backtesting/strategies/: chronos_metalabeling_strategy.py  ml_strategy.py  (+6 more)
src/data_analysis/: __init__.py  bar_aggregation.py  data_analysis.py  har_volatility.py  indicators.py  labeling.py  sampling.py  volume_data_processor.py
src/modeling/: __init__.py  autogluon_adapter.py  autogluon_metalabeling_palazzo.py  autogluon_pipeline_palazzo.py  autogluon_prediction.py  chronos2_regression.py  chronos_feature_pipeline.py  chronos_metalabeling_pipeline.py  chronos_pipeline_palazzo.py  chronos_regression.py  feature_importance.py  mlflow_utils.py  pipeline.py  pipeline_runner.py  rf_price_reversal.py  statistical_methods.py  xgboost_pipeline_palazzo.py  xgboost_price_reversal.py  xgboost_price_reversal_palazzo.py  xgboost_script.py
src/strategies/: chronos_strategy.py  martingale_strategy.py  ml_strategy.py  palazzo_strategy.py  statistical_strategies.py  trading_strategies.py
src/utils/: logging_config.py
