[tool.poetry]
name = "tp final"
version = "0.1.0"
description = ""
authors = ["leo centurion <centurionm.leo@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.3"
numpy = "^2.1.2"
seaborn = "0.13.2"
scipy = "^1.14.1"
scikit-learn = "^1.6.1"
binance = "^0.3"
notebook = "^7.3.2"
ccxt = "^4.4.64"
ta = "^0.11.0"
backtesting = "^0.6.2"
yfinance = "^0.2.55"
prophet = "^1.1.7"
optuna = "^4.4.0"
optuna-dashboard = "^0.19.0"
mlflow = "^3.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
