[tool.poetry]
name = "tp_final"
version = "0.1.0"
description = ""
authors = ["leo centurion <centurionm.leo@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11,<3.13"
pandas = "^2.2.3"
numpy = "^1.26.2"
seaborn = "0.13.2"
scipy = "^1.14.1"
scikit-learn = "^1.6.1"
binance = "^0.3"
notebook = "^7.3.2"
ccxt = "^4.4.64"
ta = "^0.11.0"
backtesting = "^0.6.2"
yfinance = "^0.2.55"
prophet = "^1.1.7"
optuna = "^4.4.0"
optuna-dashboard = "^0.19.0"
mlflow = "^3.3.1"
python-binance = "^1.0.29"
mplfinance = "^0.12.10b0"
statsmodels = "^0.14.5"
pykalman = "^0.10.2"
arch = "^7.2.0"
matplotlib = "^3.10.6"
xgboost = "^3.0.5"
cupy = "^13.6.0"
torch = "2.7.1"
transformers = "4.49.0"
accelerator = "^2025.9.5"
autogluon = "^1.4.0"
tqdm = "^4.67.1"
chronos = "^0.3"
chronos-forecasting = "^2.0.1"
pylint = "^4.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
exclude = [
".git",
".ruff_cache",
".venv",
"venv",
"__pycache__",
"build",
"dist",
"data_analysis/",
"data"
]

[tool.pylint.MASTER]
# List of modules/directories to ignore
ignore = [
".git",
".ruff_cache",
".venv",
"venv",
"__pycache__",
"build",
"dist",
"data_analysis/",
"data"
]

[MASTER]
# Add the project root ('.') to sys.path
init-hook='import sys; sys.path.append(".")'

[tool.pyright]
include = ["src", "data_analysis"]
exclude = [
    "**/node_modules",
    "**/__pycache__",
    ".venv",
    "venv",
    "dist",
    "build",
    ".cache"
]
# If you are using a virtual environment in the root
venvPath = "."
venv = ".venv"